Fixed Mobile Nav
had to make it fixed on mobile again, since mobile browser navigation bar accounts for page height (which caused the bar to display partially off-screen).

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -40,6 +40,12 @@ header button.active {
   box-shadow: none;
 }
 
+#mobile-nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
 #mobile-nav .wrapper {
   padding: 0;
   display: flex;
