--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -1,5 +1,6 @@
 .mobile {
   height: 100vh;
+  padding-bottom: 63px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
